tests/bad/example-e10b.rat
fn Main () -> Void {
  let a: Int = 10;
  if (a > 10) {
    return;
  } else {
    return;
  }
}
